test/libsolidity/syntaxTests/pragma/broken_version_strings_part.sol
pragma solidity ^ 0."8.0";
// ----
// ParserError 1684: (0-26): Invalid version pragma. String literals are only allowed as the only component in a version pragma.
